Updated the Now and CV (now Resume) pages

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Now
+title: Resume
 ---
 <div class="blurb">
-    <h1>CV</h1>
-    <p><em>Please check my <a href="https://pt.linkedin.com/in/amalbuquerque">LinkedIn page</a> for now.</em></p>
+    <h1>Resume</h1>
+    <p><em>You can find my resume <a href="https://github.com/amalbuquerque/resume/raw/master/andre-albuquerque.pdf">here</a>.</em></p>
+    <p><em>You can also check my <a href="https://pt.linkedin.com/in/amalbuquerque">LinkedIn page</a>.</em></p>
 </div><!-- /.blurb -->
