--- a/now/index.html
+++ b/now/index.html
@@ -6,11 +6,12 @@ title: Now
     <h1>What I'm doing now</h1>
     <p><em>(This is <a href="http://nownownow.com/about">a now page</a>, following the suggestion of Derek Sivers)</em></p>
     <ul>
-        <li>Currently on Onfido, developing our background checking platform.</li>
+        <li>Currently on Onfido, developing our identity verification solutions.</li>
+        <li>I recently wrote a book on Elixir, <a href="https://www.packtpub.com/application-development/mastering-elixir">Mastering Elixir.</a></li>
         <li>Previously I was on Banco de Portugal, providing the IT point of view on payment systems issues.</li>
         <li>Finished my master's thesis in monetary and financial economics in November 2016!</li>
         <li>Several keyboard projects on hold, waiting for... components, available time, the right tools!? You can see the list <a href="/projects">here</a>.</li>
-        <li>Being marvelled every day with my kid, who's now dabbling with his first words ("Poiis").</li>
+        <li>Being marvelled every day with my kid, with all the things he learns at the speed of light.</li>
     </ul>
-    <p><strong>If my activities or priorities change, I'll update this page.</strong> Last updated on December 15 2016.</p>
+    <p><strong>If my activities or priorities change, I'll update this page.</strong> Last updated on October 16 2018.</p>
 </div><!-- /.blurb -->
